--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <p id="out">I need Chaning</p>
+        <p id="out">I need Changing</p>
         <button type="button" onclick="Button()">Click to change color</button>
 
         <p></p>
