--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        
+         <meta http-equiv='cache-control' content='no-cache'> 
+         <meta http-equiv='expires' content='0'> 
+         <meta http-equiv='pragma' content='no-cache'>
+        
         <title>JS Intro</title>
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
