--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <p id="out">I need a  new color! Clic the button below</p>
+        <p id="out">I need a  new color! Clic the button below!</p>
         <button type="button" onclick="Button()">Click to change color</button>
 
         <p></p>
